No need to Lorem

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,6 @@
 <div class="container" tourAnchor="start">
   <div>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. In id dignissim dui. Curabitur interdum malesuada ipsum, sit amet vestibulum mi cursus a. Suspendisse sed urna ut felis laoreet condimentum. Nam facilisis hendrerit orci sit amet iaculis. Integer hendrerit ipsum id mauris hendrerit, scelerisque laoreet felis mattis. Curabitur ultrices, erat in rhoncus pretium, risus tortor sodales ante, eget laoreet tortor magna vitae purus. Proin elit urna, bibendum ut sapien eu, sodales accumsan enim. Pellentesque semper ligula ornare mi vehicula aliquam. Etiam dignissim quam risus, efficitur consectetur ante rutrum aliquet. Suspendisse porta magna et quam posuere, id faucibus turpis bibendum. Aenean ac lorem venenatis, vestibulum ante quis, volutpat est. Proin vitae nisi vel justo maximus imperdiet. Ut pulvinar tellus id risus volutpat, eget sodales metus semper. Quisque hendrerit lacus quis laoreet suscipit. Morbi finibus, risus non elementum congue, ipsum tortor bibendum nisl, eu ullamcorper lacus est tristique odio.
-
-Cras sed porttitor dolor. Curabitur hendrerit a purus vitae pulvinar. Donec nisi tellus, vestibulum tincidunt massa efficitur, facilisis congue purus. Vivamus commodo pulvinar sem vitae tincidunt. Aenean semper augue dui, a ultricies tortor porttitor dignissim. Vestibulum vestibulum, metus non rhoncus aliquet, neque neque varius magna, quis semper urna neque at turpis. Sed vitae nisi magna. Integer sed sodales nulla. Curabitur eget elementum massa, vel hendrerit risus. Praesent vel magna fermentum, hendrerit dolor eget, pellentesque metus. Aliquam vel egestas urna. Phasellus non urna orci. Vestibulum lacinia vulputate ornare.
-
-Etiam euismod ligula ut felis vehicula, ut rutrum arcu vulputate. Vivamus auctor purus consequat tellus sollicitudin fringilla sit amet in mauris. Vestibulum interdum ultrices odio, vel tempor odio faucibus eget. Nulla facilisi. Quisque nec fermentum mi. Nam neque nisl, fermentum eget est a, fringilla egestas neque. Donec cursus enim vel arcu tempor scelerisque. Praesent vulputate vitae enim ac consectetur. Praesent euismod metus ac tortor cursus facilisis. Aliquam volutpat malesuada euismod. Cras eget orci dolor. Maecenas ac lorem in ligula feugiat pulvinar.
+    Just some rogue text I really want to show off
   </div>
 </div>
 
